@@ -18,9 +18,7 @@ loom {
             source sourceSets.testmod
             vmArgs "-Dc2me.base.config.override.ioSystem.replaceImpl=true",
                     "-Dc2me.base.config.override.asyncScheduling.enabled=true",
-                    "-Dcom.ishland.c2me.mixin.doAudit=true",
-                    "--add-modules",
-                    "jdk.incubator.vector"
+                    "-Dcom.ishland.c2me.mixin.doAudit=true"
             if (System.getenv("GITHUB_WORKFLOW") != null) {
                 if (System.getenv("RUNNER_OS").equals("macOS")) {
                     vmArgs "-Xmx11G"
